Fix scrollbar weird rendering

--- a/src/template/style.css
+++ b/src/template/style.css
@@ -322,6 +322,7 @@ pre>code {
 
 .scrollbar-wrapper::-webkit-scrollbar,
 .overview::-webkit-scrollbar,
+main::-webkit-scrollbar,
 pre>code::-webkit-scrollbar {
     height: 5px;
     width: 7px;
@@ -331,6 +332,7 @@ pre>code::-webkit-scrollbar {
 
 .scrollbar-wrapper::-webkit-scrollbar-track,
 .overview::-webkit-scrollbar-track,
+main::-webkit-scrollbar-track,
 pre>code::-webkit-scrollbar-track {
     background-color: var(--md-sys-color-background);
     border-radius: 3rem;
@@ -338,6 +340,7 @@ pre>code::-webkit-scrollbar-track {
 
 .scrollbar-wrapper::-webkit-scrollbar-thumb,
 .overview::-webkit-scrollbar-thumb,
+main::-webkit-scrollbar-thumb,
 pre>code::-webkit-scrollbar-thumb {
     background-color: var(--md-sys-color-primary);
     border-radius: 3rem;
